--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:allowBackup="true"
         android:fullBackupContent="true"
         android:hardwareAccelerated="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher_responsive"
+        android:roundIcon="@mipmap/ic_launcher_responsive_round"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/MFB">
