--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ android {
 
 dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
+    implementation 'com.android.support:preference-v7:28.0.0-alpha3'
     implementation 'com.android.support:design:28.0.0-alpha3'
     implementation 'com.android.support:support-v4:28.0.0-alpha3'
     implementation 'org.jsoup:jsoup:1.11.2'
