--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion "27.0.3"
-    flavorDimensions "versionCode"
+    buildToolsVersion '27.0.3'
+    flavorDimensions 'versionCode'
 
     lintOptions {
         checkReleaseBuilds true
@@ -11,12 +11,12 @@ android {
     }
 
     defaultConfig {
-        applicationId "me.zeeroooo.materialfb"
+        applicationId 'me.zeeroooo.materialfb'
         minSdkVersion 28
         targetSdkVersion 28
         versionCode 67
-        versionName "3.8.1"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        versionName '3.8.1'
+        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
     }
 
     compileOptions {
@@ -28,7 +28,7 @@ android {
     productFlavors {
         fdroid {}
         labs {
-            applicationId "me.zeerooo.materialfb"
+            applicationId 'me.zeerooo.materialfb'
         }
     }
 
@@ -43,14 +43,12 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
-    implementation 'com.android.support:preference-v7:28.0.0-alpha3'
-    implementation 'com.android.support:design:28.0.0-alpha3'
-    implementation 'com.android.support:support-v4:28.0.0-alpha3'
-    implementation 'org.jsoup:jsoup:1.11.2'
-    implementation 'com.github.bumptech.glide:glide:4.7.1'
-
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation(
+            [group: 'com.android.support', name: 'appcompat-v7', version: supportLibraryVersionn],
+            [group: 'com.android.support', name: 'preference-v7', version: supportLibraryVersionn],
+            [group: 'com.android.support', name: 'design', version: supportLibraryVersionn],
+            [group: 'com.android.support', name: 'support-v4', version: supportLibraryVersionn],
+            [group: 'org.jsoup', name: 'jsoup', version: '1.11.3'],
+            [group: 'com.github.bumptech.glide', name: 'glide', version: '4.7.1'],
+    )
 }
