--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,10 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         jcenter()
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
@@ -20,14 +12,12 @@ allprojects {
     repositories {
         mavenCentral()
         jcenter()
-        maven {
-            url "https://jitpack.io"
-        }
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
+        google()
     }
+}
+
+ext {
+    supportLibraryVersionn = '28.0.0-alpha3'
 }
 
 task clean(type: Delete) {
