--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
             [group: 'com.android.support', name: 'preference-v7', version: supportLibraryVersionn],
             [group: 'com.android.support', name: 'design', version: supportLibraryVersionn],
             [group: 'com.android.support', name: 'support-v4', version: supportLibraryVersionn],
+            [group: 'com.github.chrisbanes', name: 'PhotoView', version: '2.1.3'],
             [group: 'org.jsoup', name: 'jsoup', version: '1.11.3'],
             [group: 'com.github.bumptech.glide', name: 'glide', version: '4.7.1'],
     )
