--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
-        android:name=".activity.MaterialFacebookApplication"
+        android:name=".activity.App"
         android:allowBackup="true"
         android:fullBackupContent="true"
         android:hardwareAccelerated="true"
